[package]
name = "recoded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
eframe = { version = "0.26", features = ["serde", "persistence"] }
egui = { version = "0.26", features = ["serde", "persistence"] }
egui-snarl = { version = "0.3.0", features = ["serde"] }
piet = { version = "0.6.2", features = ["serde"] }
piet-svg = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
